move pages to ./pages/ and fix all links

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="collection.html">Collection</a></li>
-                <li><a href="filters.html">Filters</a></li>
+                <li><a href="pages/collection.html">Collection</a></li>
+                <li><a href="pages/filters.html">Filters</a></li>
             </ul>
         </nav>
         <img src="assets/burger-menu.png" alt="dropdown_icon" class="burger-icon" />
@@ -75,8 +75,8 @@
                 <p>Let the deck decide where you dine next!</p>
 
                 <div class="hero-buttons">
-                    <button class="button-type1" onclick="location.href='swipe.html'">PICK RANDOM</button>
-                    <button class="button-type2" onclick="location.href='filters.html'">CHOOSE FILTERS</button>
+                    <button class="button-type1" onclick="location.href='pages/swipe.html'">PICK RANDOM</button>
+                    <button class="button-type2" onclick="location.href='pages/filters.html'">CHOOSE FILTERS</button>
                 </div>
             </section>
 
@@ -132,21 +132,21 @@
           <h1>1</h1>
           <h2>Curate Your Cravings</h2>
           <p>Filter by cuisine, price, distance, and rating, or leave it to fate!</p>
-          <button class="button-type1" onclick="location.href='filters.html'">Start Filtering</button>
+          <button class="button-type1" onclick="location.href='pages/filters.html'">Start Filtering</button>
         </div>
 
         <div class="instruction-step">
           <h1>2</h1>
           <h2>Browse Your Next Bite</h2>
           <p>Browse restaurants and tap the check mark to save or X to see more</p>
-          <button class="button-type1" onclick="location.href='swipe.html'">Browse Cards</button>
+          <button class="button-type1" onclick="location.href='pages/swipe.html'">Browse Cards</button>
         </div>
           
         <div class="instruction-step">
           <h1>3</h1>
           <h2>Feast on Favorites</h2>
           <p>View your saved restaurants and decide where to eat next</p>
-          <button class="button-type1" onclick="location.href='collection.html'">View Collection</button>
+          <button class="button-type1" onclick="location.href='pages/collection.html'">View Collection</button>
         </div>
       </div>
     </section>
