--- a/pages/collection.html
+++ b/pages/collection.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="description" content="Restaurant Crisis, a card app for discovering new places to eat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/collections.css" />
-    <script src="js/scripts.js"></script>
-    <script src="js/collection.js"></script>
-    <link rel="shortcut icon" href="assets/app-favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/collections.css" />
+    <script src="/js/scripts.js"></script>
+    <script src="/js/collection.js"></script>
+    <link rel="shortcut icon" href="/assets/app-favicon.ico" type="image/x-icon" />
     <title>View Collection - FoodFlip</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="assets/app-icon.png" alt="app icon" class="app-icon" /></a>
+        <a href="/index.html"><img src="/assets/app-icon.png" alt="app icon" class="app-icon" /></a>
         <!-- nav bar -->
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="collection.html">Collection</a></li>
                 <li><a href="filters.html">Filters</a></li>
             </ul>
         </nav>
-        <img src="assets/burger-menu.png" alt="dropdown_icon" class="burger-icon" /> <!-- insert burger icon here!-->
+        <img src="/assets/burger-menu.png" alt="dropdown_icon" class="burger-icon" />
     </header>
 
 
@@ -32,7 +32,6 @@
         <div class="left-body" id="left-body">
           <p class="empty-msg">Click on a card to view details</p>
         </div>
-        <!-- <div  style="display: none;" id="back-button-container"></div> -->
          <div id="back-button-container"></div>
       </aside>
 
