--- a/pages/swipe.html
+++ b/pages/swipe.html
@@ -7,23 +7,23 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Permanent+Marker&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="shortcut icon" href="assets/app-favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="shortcut icon" href="/assets/app-favicon.ico" type="image/x-icon" />
   <title>Browse Restaurants - FoodFlip</title>
 </head>
 
 <body>
   <!-- Header -->
   <header>
-    <a href="index.html"><img src="assets/app-icon.png" alt="app icon" class="app-icon" /></a>
+    <a href="/index.html"><img src="/assets/app-icon.png" alt="app icon" class="app-icon" /></a>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="collection.html">Collection</a></li>
         <li><a href="filters.html">Filters</a></li>
       </ul>
     </nav>
-    <img src="assets/burger-menu.png" alt="menu" class="burger-icon" />
+    <img src="/assets/burger-menu.png" alt="menu" class="burger-icon" />
 
   </header>
   <div class="header-action-bar">
@@ -46,10 +46,10 @@
         <!-- Accept / Reject Buttons -->
         <div class="swipe-buttons">
           <button title="Reject">
-            <img src="assets/decline-icon.png" alt="Reject" />
+            <img src="/assets/decline-icon.png" alt="Reject" />
           </button>
           <button title="Accept">
-            <img src="assets/accept-icon.png" alt="Accept" />
+            <img src="/assets/accept-icon.png" alt="Accept" />
           </button>
         </div>
       </div>
@@ -77,8 +77,8 @@
 
   </main>
     <!-- Scripts -->
-    <script src="js/scripts.js"></script>  <!-- for navbar toggling, etc. -->
-    <script src="js/swipe.js"></script>    <!-- rendering & swipe/flip logic -->
+    <script src="/js/scripts.js"></script>  <!-- for navbar toggling, etc. -->
+    <script src="/js/swipe.js" type="module"></script>    <!-- rendering & swipe/flip logic -->
   </body>
 
 </html>
