--- a/pages/filters.html
+++ b/pages/filters.html
@@ -7,30 +7,30 @@
       content="Restaurant Crisis, a card app for discovering new places to eat."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/filters.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/filters.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="shortcut icon"
-      href="assets/app-favicon.ico"
+      href="/assets/app-favicon.ico"
       type="image/x-icon"
     />
     <title>Customize Filters - FoodFlip</title>
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><img src="assets/app-icon.png" alt="app icon" class="app-icon"
+      <a href="/index.html"
+        ><img src="/assets/app-icon.png" alt="app icon" class="app-icon"
       /></a>
       <!-- nav bar -->
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="collection.html">Collection</a></li>
           <li><a href="filters.html">Filters</a></li>
         </ul>
       </nav>
       <img
-        src="assets/burger-menu.png"
+        src="/assets/burger-menu.png"
         alt="dropdown_icon"
         class="burger-icon"
       />
@@ -120,7 +120,7 @@
       <button id="done-btn">Done → Start swiping</button>
     </section>
     <footer></footer>
-    <script src="js/scripts.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="/js/scripts.js"></script>
+    <script src="/js/filters.js" type="module"></script>
   </body>
 </html>
