added hint above the card

--- a/pages/swipe.html
+++ b/pages/swipe.html
@@ -39,6 +39,8 @@
       
       <!-- Card and Buttons Container -->
       <div class="card-buttons-container">
+        <!-- Hint Text -->
+        <p class="card-hint">Click card to see more details</p>
         <!-- Card -->
         <div id="card-container">
         </div>
