fixed css imports

--- a/pages/swipe.html
+++ b/pages/swipe.html
@@ -7,8 +7,9 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Permanent+Marker&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="shortcut icon" href="/assets/app-favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/collections.css" />
+  <link rel="shortcut icon" href="../assets/app-favicon.ico" type="image/x-icon" />
   <title>Browse Restaurants - FoodFlip</title>
 </head>
 
@@ -79,8 +80,9 @@
 
   </main>
     <!-- Scripts -->
-    <script src="/js/scripts.js"></script>  <!-- for navbar toggling, etc. -->
+    <script src="../js/scripts.js"></script>  <!-- for navbar toggling, etc. -->
     <script src="/js/swipe.js" type="module"></script>    <!-- rendering & swipe/flip logic -->
+    <script src="../js/collection.js"></script>
   </body>
 
 </html>
