--- a/pages/collection.html
+++ b/pages/collection.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="description" content="Restaurant Crisis, a card app for discovering new places to eat.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/collections.css" />
-    <script src="/js/scripts.js"></script>
-    <script src="/js/collection.js"></script>
-    <link rel="shortcut icon" href="/assets/app-favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/collections.css" />
+    <script src="../js/scripts.js"></script>
+    <script src="../js/collection.js"></script>
+    <link rel="shortcut icon" href="../assets/app-favicon.ico" type="image/x-icon" />
     <title>View Collection - FoodFlip</title>
 </head>
 <body>
