--- a/pages/filters.html
+++ b/pages/filters.html
@@ -8,10 +8,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/filters.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/collections.css" />
     <link
       rel="shortcut icon"
-      href="/assets/app-favicon.ico"
+      href="../assets/app-favicon.ico"
       type="image/x-icon"
     />
     <title>Customize Filters - FoodFlip</title>
@@ -120,7 +121,8 @@
       <button id="done-btn">Done → Start swiping</button>
     </section>
     <footer></footer>
-    <script src="/js/scripts.js"></script>
-    <script src="/js/filters.js" type="module"></script>
+    <script src="../js/scripts.js"></script>
+    <script src="../js/filters.js" type="module"></script>
+    <script src="../js/collection.js"></script>
   </body>
 </html>
