--- a/pages/collection.html
+++ b/pages/collection.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="/index.html"><img src="/assets/app-icon.png" alt="app icon" class="app-icon" /></a>
+        <a href="/index.html"><img src="../assets/app-icon.png" alt="app icon" class="app-icon" /></a>
         <!-- nav bar -->
         <nav>
             <ul>
@@ -22,7 +22,7 @@
                 <li><a href="filters.html">Filters</a></li>
             </ul>
         </nav>
-        <img src="/assets/burger-menu.png" alt="dropdown_icon" class="burger-icon" />
+        <img src="../assets/burger-menu.png" alt="dropdown_icon" class="burger-icon" />
     </header>
 
 
