--- a/pages/filters.html
+++ b/pages/filters.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <a href="/index.html"
-        ><img src="/assets/app-icon.png" alt="app icon" class="app-icon"
+        ><img src="../assets/app-icon.png" alt="app icon" class="app-icon"
       /></a>
       <!-- nav bar -->
       <nav>
@@ -31,7 +31,7 @@
         </ul>
       </nav>
       <img
-        src="/assets/burger-menu.png"
+        src="../assets/burger-menu.png"
         alt="dropdown_icon"
         class="burger-icon"
       />
