--- a/pages/swipe.html
+++ b/pages/swipe.html
@@ -16,7 +16,7 @@
 <body>
   <!-- Header -->
   <header>
-    <a href="/index.html"><img src="/assets/app-icon.png" alt="app icon" class="app-icon" /></a>
+    <a href="/index.html"><img src="../assets/app-icon.png" alt="app icon" class="app-icon" /></a>
     <nav>
       <ul>
         <li><a href="/index.html">Home</a></li>
@@ -24,7 +24,7 @@
         <li><a href="filters.html">Filters</a></li>
       </ul>
     </nav>
-    <img src="/assets/burger-menu.png" alt="menu" class="burger-icon" />
+    <img src="../assets/burger-menu.png" alt="menu" class="burger-icon" />
 
   </header>
   <div class="header-action-bar">
@@ -49,10 +49,10 @@
         <!-- Accept / Reject Buttons -->
         <div class="swipe-buttons">
           <button title="Reject">
-            <img src="/assets/decline-icon.png" alt="Reject" />
+            <img src="../assets/decline-icon.png" alt="Reject" />
           </button>
           <button title="Accept">
-            <img src="/assets/accept-icon.png" alt="Accept" />
+            <img src="../assets/accept-icon.png" alt="Accept" />
           </button>
         </div>
       </div>
