--- a/pages/filters.html
+++ b/pages/filters.html
@@ -7,7 +7,7 @@
       content="Restaurant Crisis, a card app for discovering new places to eat."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/filters.css" />
+    <link rel="stylesheet" href="../css/filters.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link
       rel="shortcut icon"
