fix navbar links

--- a/pages/swipe.html
+++ b/pages/swipe.html
@@ -15,10 +15,10 @@
 <body>
   <!-- Header -->
   <header>
-    <a href="/index.html"><img src="../assets/app-icon.png" alt="app icon" class="app-icon" /></a>
+    <a href="../index.html"><img src="../assets/app-icon.png" alt="app icon" class="app-icon" /></a>
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="collection.html">Collection</a></li>
         <li><a href="filters.html">Filters</a></li>
       </ul>
