--- a/pages/collection.html
+++ b/pages/collection.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header>
-        <a href="/index.html"><img src="../assets/app-icon.png" alt="app icon" class="app-icon" /></a>
+        <a href="../index.html"><img src="../assets/app-icon.png" alt="app icon" class="app-icon" /></a>
         <!-- nav bar -->
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="collection.html">Collection</a></li>
                 <li><a href="filters.html">Filters</a></li>
             </ul>
