--- a/pages/filters.html
+++ b/pages/filters.html
@@ -18,13 +18,13 @@
   </head>
   <body>
     <header>
-      <a href="/index.html"
+      <a href="../index.html"
         ><img src="../assets/app-icon.png" alt="app icon" class="app-icon"
       /></a>
       <!-- nav bar -->
       <nav>
         <ul>
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="collection.html">Collection</a></li>
           <li><a href="filters.html">Filters</a></li>
         </ul>
