--- a/pages/swipe.html
+++ b/pages/swipe.html
@@ -80,7 +80,7 @@
   </main>
     <!-- Scripts -->
     <script src="../js/scripts.js"></script>  <!-- for navbar toggling, etc. -->
-    <script src="/js/swipe.js" type="module"></script>    <!-- rendering & swipe/flip logic -->
+    <script src="../js/swipe.js" type="module"></script>    <!-- rendering & swipe/flip logic -->
   </body>
 
 </html>
